# hmi_win_d3d11

./: .gitignore  CMakeLists.txt
hmi_graphics/: CMakeLists.txt
hmi_graphics/include/graphics/: graphics_element.h  graphics_system.h  types.h
hmi_graphics/src/: comptr.h  graphics_element.cpp  graphics_element_pimpl.h  graphics_system.cpp  graphics_system_d3d11.cpp  graphics_system_d3d11.h
hmi_system/: CMakeLists.txt
hmi_system/src/: main.cpp
vnc/include/vnc/: vnc.h
